--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -22,7 +22,6 @@
     "xlarge": "/assets/images/xlarge.png"
   },
   "author": {
-    "name": "Roger Florén",
-    "email": "roger@floren.nu"
+    "name": "Roger Florén"
   }
 }
