--- a/app.json
+++ b/app.json
@@ -23,8 +23,7 @@
     "xlarge": "/assets/images/xlarge.png"
   },
   "author": {
-    "name": "Roger Florén",
-    "email": "roger@floren.nu"
+    "name": "Roger Florén"
   },
   "drivers": [
     {
