--- a/app.json
+++ b/app.json
@@ -11,8 +11,9 @@
     "en": "WS90 Weather (MQTT)"
   },
   "description": {
-    "en": "Reads WS90 weather data from MQTT."
+    "en": "Real-time weather monitoring from your WS90 station"
   },
+  "brandColor": "#4A90E2",
   "category": [
     "climate"
   ],
@@ -20,11 +21,20 @@
   "images": {
     "small": "/assets/images/small.png",
     "large": "/assets/images/large.png",
-    "xlarge": "/assets/images/xlarge.png"
+    "xlarge": "/assets/images/xlarge.jpg"
   },
   "author": {
     "name": "Roger Florén"
   },
+  "contributing": {
+    "donate": {
+      "paypal": {
+        "username": "w1dger"
+      }
+    }
+  },
+  "source": "https://github.com/w1dg3r/shelly_ws90",
+  "support": "mailto:widger@gmail.com",
   "drivers": [
     {
       "name": {
@@ -49,6 +59,16 @@
             "en": "m/s"
           }
         }
+      },
+      "energy": {
+        "batteries": [
+          "OTHER"
+        ]
+      },
+      "images": {
+        "small": "/drivers/ws90/assets/images/small.png",
+        "large": "/drivers/ws90/assets/images/large.png",
+        "xlarge": "/drivers/ws90/assets/images/xlarge.png"
       },
       "mobile": {
         "components": [
