--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -32,6 +32,7 @@
       }
     }
   },
+  "homeyCommunityTopicId": 150545,
   "source": "https://github.com/w1dg3r/shelly_ws90",
   "support": "mailto:widger@gmail.com"
 }
