--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.acranium.ws90",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "compatibility": ">=10.0.0",
   "sdk": 3,
   "platforms": [
@@ -34,5 +34,19 @@
   },
   "homeyCommunityTopicId": 150545,
   "source": "https://github.com/w1dg3r/shelly_ws90",
-  "support": "mailto:widger@gmail.com"
+  "support": "mailto:widger@gmail.com",
+  "api": {
+    "getLogs": {
+      "method": "get",
+      "path": "/logs"
+    },
+    "deleteLogs": {
+      "method": "delete",
+      "path": "/logs"
+    },
+    "getStatus": {
+      "method": "get",
+      "path": "/status"
+    }
+  }
 }
