--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.acranium.ws90",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "compatibility": ">=10.0.0",
   "sdk": 3,
   "platforms": [
@@ -36,6 +36,20 @@
   "homeyCommunityTopicId": 150545,
   "source": "https://github.com/w1dg3r/shelly_ws90",
   "support": "mailto:widger@gmail.com",
+  "api": {
+    "getLogs": {
+      "method": "get",
+      "path": "/logs"
+    },
+    "deleteLogs": {
+      "method": "delete",
+      "path": "/logs"
+    },
+    "getStatus": {
+      "method": "get",
+      "path": "/status"
+    }
+  },
   "drivers": [
     {
       "name": {
