feat: Added meaningful rain capabilities and redesigned UI icons (fixes #2)

--- a/.homeycompose/capabilities/measure_dew_point.json
+++ b/.homeycompose/capabilities/measure_dew_point.json
@@ -16,5 +16,5 @@
     "getable": true,
     "setable": false,
     "uiComponent": "sensor",
-    "icon": "/assets/icon.svg"
+    "icon": "/assets/capabilities/dew_point.svg"
 }
