--- a/.homeycompose/capabilities/measure_rain_24h.json
+++ b/.homeycompose/capabilities/measure_rain_24h.json
@@ -1,20 +1,20 @@
 {
     "type": "number",
     "title": {
-        "en": "Feels like"
+        "en": "Rain (24h)"
     },
     "label": {
-        "en": "Feels like"
+        "en": "Rain last 24h"
     },
     "units": {
-        "en": "°C"
+        "en": "mm"
     },
     "decimals": 1,
-    "min": -100,
-    "max": 100,
+    "min": 0,
+    "max": 500,
     "chartType": "line",
     "getable": true,
     "setable": false,
     "uiComponent": "sensor",
-    "icon": "/assets/capabilities/apparent_temp.svg"
+    "icon": "/assets/capabilities/rain_24h.svg"
 }
